--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1319,6 +1319,7 @@
             <a href="https://app.hackthebox.com/challenges/157" target="_blank">Chase</a> : HackTheBox <br><br>
             CCDC Meeting <br><br>
             <a href="https://tryhackme.com/room/flatline" target="_blank">Flatline</a> : TryHackMe <br><br>
+            Python Programming <br><br>
           </p>
         <br><br> 
         <h5>Walkthrough Videos</h5>
@@ -1333,6 +1334,25 @@
             <a href="https://hellfire0x01.medium.com/my-story-how-i-get-started-in-cyber-security-how-can-you-e7db00187f92" target="_blank">My story : How I get started in Cyber Security & How can you…</a> : Akshat Gupta <br><br>
             <a href="https://infosecwriteups.com/my-journey-of-ejpt-fbef63ccda00" target="_blank">My Journey of eJPT</a> : Akshat Gupta <br><br>
             <a href="https://medium.com/malware-buddy/my-top-books-to-learn-malware-analysis-and-reverse-engineering-2ae1c6e209b9" target="_blank">My Top Books to Learn Malware Analysis and Reverse Engineering</a> : Thomas Roccia <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 59: Feb 27 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br> 
+        <h5>Walkthrough Videos</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+
           </p>
         <br><br>
       </p>
