--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1342,17 +1342,18 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
-          </p>
-        <br><br> 
-        <h5>Walkthrough Videos</h5>
-          <p>
-
+            Security+ <br><br>
+            <a href="https://hackthebox.eu/" target="_blank">Reading HackTheBox Solved Boxes Notes</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/malmalintroductory" target="_blank">MAL: Malware Introductory</a> : TryHackMe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
           <p>
-
+            <a href="https://medium.com/@kiransethu/how-to-become-a-pentester-b21e7072d4f9" target="_blank">How to become a Pentester</a> Kiran Sethu <br><br>
+            <a href="https://gouthamvishwanath.medium.com/free-certifications-available-for-security-analyst-soc-7b195e4a76ef" target="_blank">(Free) Certifications Available for Security Analyst (SOC)</a> : Gowtham Vishwanath <br><br>
+            <a href="https://medium.com/@brutehack05/what-are-the-top-5-hacking-groups-23ae4fd7f7e1" target="_blank">What Are The Top 5 Hacking Groups?</a> BruteHack <br><br>
+            <a href="https://medium.com/@varmaanu001/bank-verification-bypass-broken-object-level-authorisation-9136bdd43f0f" target="_blank">$$$ Bank 🏦Verification Bypass(Broken Object Level Authorisation)</a> : Anurag__Verma <br><br>
           </p>
         <br><br>
       </p>
