--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1358,6 +1358,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 60: Feb 28 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/178" target="_blank">sanitize</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/240" target="_blank">ServMon</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/malmalintroductory" target="_blank">MAL: Malware Introductory</a> : TryHackMe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://tmc222.medium.com/volatility-memory-image-forensics-74ecfea17c2f" target="_blank">Volatility — Memory Image Forensics</a> : Hacktivities <br><br>
+            <a href="https://medium.com/@Hackfreaksofficial/cobalt-strike-beginners-guide-part-2-57e5f24657b1" target="_blank">Cobalt Strike. Beginner’s Guide | part 2</a> : Hackfreaksofficial <br><br>
+            <a href="https://medium.com/@Hackfreaksofficial/how-to-disable-security-cameras-on-any-wi-fi-network-58e778aedf97" target="_blank">How to disable security cameras on any Wi-Fi network</a> Hackfreaksofficial <br><br>
+            <a href="https://infosecwriteups.com/how-i-made-16-500-hacking-cdn-caching-servers-part-2-4995ece4c6e6" target="_blank">How I Made $16,500 Hacking CDN Caching Servers — Part 2</a> : Kevin <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
