--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -54,6 +54,19 @@
               </div>
             </div>
           </li>
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">March</button>
+              <div class="dropdown-content">
+                <a href="#week9">Week 9</a>
+                <!--
+                <a href="#week6">Week 10</a>
+                <a href="#week7">Week 11</a>
+                <a href="#week8">Week 12</a>
+                -->
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -1374,6 +1387,27 @@
             <a href="https://medium.com/@Hackfreaksofficial/cobalt-strike-beginners-guide-part-2-57e5f24657b1" target="_blank">Cobalt Strike. Beginner’s Guide | part 2</a> : Hackfreaksofficial <br><br>
             <a href="https://medium.com/@Hackfreaksofficial/how-to-disable-security-cameras-on-any-wi-fi-network-58e778aedf97" target="_blank">How to disable security cameras on any Wi-Fi network</a> Hackfreaksofficial <br><br>
             <a href="https://infosecwriteups.com/how-i-made-16-500-hacking-cdn-caching-servers-part-2-4995ece4c6e6" target="_blank">How I Made $16,500 Hacking CDN Caching Servers — Part 2</a> : Kevin <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h2 id="week8">Week 8</h2> <br><br><br>
+      <h3>Day 61: Mar 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/48" target="_blank">Blocky</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/ohsint" target="_blank">OhSINT</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/classicpasswd" target="_blank">Classic Passwd</a> : TryHackMe <br><br>
+            CCDC Meeting <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://pathakabhi24.medium.com/knowledge-of-malware-31513df0d0dd" target="_blank">Knowledge of Malware</a> : Abhinav Pathak <br><br>
+            <a href="https://d0znpp.medium.com/security-misconfiguration-%EF%B8%8F-what-you-need-to-know-ed736d46acdb" target="_blank">Security Misconfiguration☝️ — What you need to know</a> : Ivan Novikov <br><br>
+            <a href="https://0xjin.medium.com/ecptx-exam-review-by-0xjin-7602232b53d3" target="_blank">eCPTX Exam Review by 0xJin</a> : 0xJin <br><br>
+            <a href="https://medium.com/@aviduttkhantwal/crackme-challenge-pleasecrackme-1088fe9da6a6" target="_blank">Crackme Challenge: PleaseCrackMe</a> : Avidutt Khantwal <br><br>
           </p>
         <br><br>
       </p>
