--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1412,6 +1412,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 62: Mar 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/geolocatingimages" target="_blank">Geolocating Images</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/gallery666" target="_blank">Gallery</a> : TryHackMe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/26" target="_blank">Bank</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@vflexo/a-weird-price-tampering-vulnerability-1251dfe8d2a1" target="_blank">A Weird Price Tampering Vulnerability</a> : vFlexo <br><br>
+            <a href="https://technicalsurendra.medium.com/methods-to-bypass-two-factor-authentication-bc2bd35bd44e" target="_blank">Methods to Bypass two factor Authentication</a> : Surendra Choudhury <br><br>
+            <a href="https://medium.com/@TutorialBoy24/introduction-642e6094a49d" target="_blank">Introduction to SQL Server Injection</a> : TutorialBoy <br><br>
+            <a href="https://medium.com/@wondersome/reconnaissance-tools-for-hacking-d8404399d1f5" target="_blank">Reconnaissance tools for hacking</a> : Ayrat Murtazin <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
