--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1432,6 +1432,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 62: Mar 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/323" target="_blank">Armageddon</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/vulnnetdotpy" target="_blank">Vulnet: dotpy</a> : TryHackMe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://0xjin.medium.com/how-to-create-a-vulnerable-box-7fdc94d7fb21" target="_blank">How to create a Vulnerable Box</a> : 0xJin <br><br>
+            <a href="https://mrpentestguy.medium.com/osint-series-part-1-7d00f3526295" target="_blank">OSINT Series ... Part-1</a> : mrpentestguy <br><br>
+            <a href="https://apexvicky.medium.com/wanna-cry-ransomware-a-hackers-perspective-part-1-54e38740837c" target="_blank">Wanna Cry Ransomware — A Hacker’s Perspective (Part 1) </a> : apex <br><br>
+            <a href="https://infosecwriteups.com/how-i-couldve-bypassed-the-2fa-security-of-instagram-once-again-43c05cc9b755" target="_blank">How I could’ve bypassed the 2FA security of Instagram once again?</a> : Samip Aryal <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
