--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1470,6 +1470,9 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 65: Mar 5 2022</h3><br>
+      <p>Break Day</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
