--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1471,7 +1471,15 @@
       </p>
       <br><br>
       <h3>Day 65: Mar 5 2022</h3><br>
-      <p>Break Day</p>
+      <p>
+        <h5>My Activities</h5>
+        <p>
+          <a href="https://tryhackme.com/room/cve202141773" target="_blank">CVE-2021-41773/42013</a> : TryHackMe <br><br>
+          CCDC Meeting <br><br>
+          C Programming <br><br>
+        </p>
+      <br><br>
+      </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
