--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1473,12 +1473,31 @@
       <h3>Day 65: Mar 5 2022</h3><br>
       <p>
         <h5>My Activities</h5>
-        <p>
-          <a href="https://tryhackme.com/room/cve202141773" target="_blank">CVE-2021-41773/42013</a> : TryHackMe <br><br>
-          CCDC Meeting <br><br>
-          C Programming <br><br>
-        </p>
+          <p>
+            <a href="https://tryhackme.com/room/cve202141773" target="_blank">CVE-2021-41773/42013</a> : TryHackMe <br><br>
+            CCDC Meeting <br><br>
+            C Programming <br><br>
+          </p>
+        <br><br>
+      </p>
       <br><br>
+      <h3>Day 66: Mar 6 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/ohmyweb" target="_blank">Oh My WebServer</a> : TryHackMe <br><br>
+            <a href="https://hackersarcade.com/academy/" target="_blank">Academy</a> : Hackers Arcade <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://musyokaian.medium.com/oh-my-webserver-tryhackme-walkthrough-adcf3f4e0cf8" target="_blank">Oh My WebServer TryHackMe Walkthrough</a> Musyoka Ian <br><br>
+            <a href="https://blog.shiftleft.io/http-request-smuggling-a-primer-dc5beb2ed9b5" target="_blank">HTTP Request Smuggling: A Primer</a> Katie Horne <br><br>
+            <a href="https://medium.com/@1337Fenrir/how-did-i-find-directory-traversal-attack-using-github-9b051ed749ca" target="_blank">[ Directory Traversal attack ] How did I find it using GitHub</a> Fenrir <br><br>
+            <a href="https://medium.com/@Stefin-Franklin/how-hackers-switch-multiple-locations-every-second-f800c4170828" target="_blank">How Hackers Switch Multiple Locations Every Second?</a> : Stefin Franklin <br><br>
+            <a href="https://technicalsurendra.medium.com/my-first-bug-bounty-reward-50bea0749c5c" target="_blank">My First Bug Bounty Reward</a> : Surendra Choudhury <br><br>
+          </p>
+        <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
