--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1500,6 +1500,28 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 67: Mar 7 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            <a href="https://tryhackme.com/room/marketplace" target="_blank">The Marketplace</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/starting-point" target="_blank">Bike</a> : HackTheBox Starting Point <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/dark-roast-security/dark-side-126-using-metasploit-to-exploit-smb-89108ba609aa" target="_blank">Dark Side 126: Using Metasploit to Exploit SMB</a> : Katlyn Gallo <br><br>
+            <a href="https://infosecwriteups.com/exposing-millions-of-irctc-passengers-ticket-details-53338280fb9e" target="_blank">Exposing Millions of IRCTC Passengers' ticket details.</a> : Renganathan <br><br>
+            <a href="https://medium.com/@kojodaprogrammer/ssrf-to-a-full-account-takeover-ato-22b5a3004413" target="_blank">SSRF to a Full Account Takeover (ATO)</a> : Kwadwo Amoako <br><br>
+            <a href="https://medium.com/codex/the-best-programming-languages-that-you-must-learn-for-cybersecurity-in-2022-2008752c987c" target="_blank">The best programming languages that you MUST learn for cybersecurity in 2022!</a> : Future Cyber Analyst <br><br>
+            <a href="https://medium.com/@awezkagdi.ak/no-rate-limiting-on-forget-password-page-email-triggering-7cd95a55a1d4" target="_blank">No Rate Limiting on Forget Password Page (Email Triggering)</a> Awez Kagdi <br><br>
+            <a href="https://medium.com/techiepedia/malware-analysis-the-art-of-understanding-malware-ffc5e69feb3e" target="_blank">Malware Analysis- The art of understanding malware</a> : Krishna Sai Merella <br><br>
+            <a href="https://jaiguptanick.medium.com/oscp-cracking-the-new-pattern-6c4f1c9e2409" target="_blank">OSCP — Cracking The New Pattern</a> : Jai Gupta <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
