--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1507,6 +1507,7 @@
             <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
             <a href="https://tryhackme.com/room/marketplace" target="_blank">The Marketplace</a> : TryHackMe <br><br>
             <a href="https://app.hackthebox.com/starting-point" target="_blank">Bike</a> : HackTheBox Starting Point <br><br>
+            Security+ <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
@@ -1518,6 +1519,26 @@
             <a href="https://medium.com/@awezkagdi.ak/no-rate-limiting-on-forget-password-page-email-triggering-7cd95a55a1d4" target="_blank">No Rate Limiting on Forget Password Page (Email Triggering)</a> Awez Kagdi <br><br>
             <a href="https://medium.com/techiepedia/malware-analysis-the-art-of-understanding-malware-ffc5e69feb3e" target="_blank">Malware Analysis- The art of understanding malware</a> : Krishna Sai Merella <br><br>
             <a href="https://jaiguptanick.medium.com/oscp-cracking-the-new-pattern-6c4f1c9e2409" target="_blank">OSCP — Cracking The New Pattern</a> : Jai Gupta <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 68: Mar 8 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/basicmalwarere" target="_blank">Basic Malware RE</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/263" target="_blank">Buff</a> : HackTheBox <br><br>
+            CCDC Meeting <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://levelup.gitconnected.com/information-gathering-first-step-towards-website-hacking-462dcad56c5a" target="_blank">Information Gathering — First Step towards Website Hacking</a> : Gourav Dhar <br><br>
+            <a href="https://pathakabhi24.medium.com/learning-resource-for-hackers-24533ed6286" target="_blank">Learning Resource for Hackers</a> : Abhinav Pathak <br><br>
+            <a href="https://medium.com/@kljaswanth/ceh-practical-exam-writeup-a70c61e067d5" target="_blank">CEH-PRACTICAL Exam writeup</a> : Lakshmi Jaswanth Kellampalli <br><br>
+            <a href="recurse.com/blog/5-learning-c-with-gdb" target="_blank">Learning C with gdb</a> : Alan O'Donnell <br><br>
           </p>
         <br><br>
       </p>
