--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1543,6 +1543,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 69: Mar 9 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/basicmalwarere" target="_blank">Basic Malware RE</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/what-is-idor-vulnerability-and-how-does-it-affect-you-85431d10f8fb" target="_blank">What is IDOR Vulnerability, and how does it affect you?</a> : c0d3x27 <br><br>
+            <a href="https://takahiro-oda.medium.com/project-gain-access-to-the-target-system-using-trojans-7b34e18dee1e" target="_blank">[project]Gain Access to the Target System using Trojans</a> : Takahiro Oda <br><br>
+            <a href="https://systemweakness.com/phishing-like-a-hacker-eac0fae935f0" target="_blank">Phishing like a Hacker</a> : Ángel Cortez <br><br>
+            <a href="https://spoilyzer.medium.com/beginner-bug-bounty-resources-4e0f8dc822b4" target="_blank">Beginner Bug Bounty Resources</a> : Spoilyzer <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
