--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1561,6 +1561,16 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 70: Mar 10 2022</h3><br>
+      <p>
+        Break Day <br><br>
+      </p>
+      <br><br>
+      <h3>Day 71: Mar 11 2022</h3><br>
+      <p>
+        Break Day <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
