--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1568,7 +1568,8 @@
       <br><br>
       <h3>Day 71: Mar 11 2022</h3><br>
       <p>
-        Break Day <br><br>
+        Security+ <br><br>
+        <a href="https://dvc.tf/" target="_blank">dvCTF</a> <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
