--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1572,6 +1572,27 @@
         <a href="https://dvc.tf/" target="_blank">dvCTF</a> <br><br>
       </p>
       <br><br>
+      <h3>Day 72: Mar 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://dvc.tf/" target="_blank">dvCTF</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/344" target="_blank">Love</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@rupachandransangothi22/host-header-injection-leads-to-pre-account-takeover-worth-100-1bd8f2d51876" target="_blank">Host Header Injection Leads To Pre-Account Takeover Worth 100$</a> : Rupachandrans <br><br>
+            <a href="https://infosecwriteups.com/admin-access-799b50694965" target="_blank">Admin access !!</a> : th3.d1p4k <br><br>
+            <a href="https://infosecwriteups.com/whatsapp-bug-bounty-bypassing-biometric-authentication-using-voip-87548ef7a0ba" target="_blank">WhatsApp Bug Bounty: Bypassing biometric authentication using voip</a> : Arvind <br><br>
+            <a href="https://infosecwriteups.com/how-to-make-a-ransomware-with-python-c4764f2014cf" target="_blank">How to Make Ransomware with Python</a> : Febi Mudiyanto <br><br>
+            <a href="https://medium.com/codex/securing-your-linux-server-with-these-best-practices-50b30e026bd" target="_blank">Securing your Linux server with these best practices</a> : Security Lit Limited <br><br>
+            <a href="https://medium.com/techiepedia/response-manipulation-leads-to-account-takeover-e1a250acb003" target="_blank">Response Manipulation leads to Account Takeover</a> : MikeChan <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
