--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1568,7 +1568,7 @@
       <br><br>
       <h3>Day 71: Mar 11 2022</h3><br>
       <p>
-        Security+ <br><br>
+        <a href="https://www.examcompass.com/" target="_blank">Security+</a> : Examcompass <br><br>
         <a href="https://dvc.tf/" target="_blank">dvCTF</a> <br><br>
       </p>
       <br><br>
@@ -1576,7 +1576,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            Security+ <br><br>
+            <a href="https://www.examcompass.com/" target="_blank">Security+</a> : Examcompass <br><br>
             <a href="https://dvc.tf/" target="_blank">dvCTF</a> <br><br>
             <a href="https://app.hackthebox.com/machines/344" target="_blank">Love</a> : HackTheBox <br><br>
           </p>
@@ -1589,6 +1589,27 @@
             <a href="https://infosecwriteups.com/how-to-make-a-ransomware-with-python-c4764f2014cf" target="_blank">How to Make Ransomware with Python</a> : Febi Mudiyanto <br><br>
             <a href="https://medium.com/codex/securing-your-linux-server-with-these-best-practices-50b30e026bd" target="_blank">Securing your Linux server with these best practices</a> : Security Lit Limited <br><br>
             <a href="https://medium.com/techiepedia/response-manipulation-leads-to-account-takeover-e1a250acb003" target="_blank">Response Manipulation leads to Account Takeover</a> : MikeChan <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 73: Mar 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/empline" target="_blank">Empline</a> : TryHackMe <br><br>
+            <a href="https://www.examcompass.com/" target="_blank">Security+</a> : Examcompass <br><br>
+            <a href="https://utctf.live/" target="_blank">UTCTF</a> <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@Hackfreaksofficial/website-hacking-with-google-7d4fb5f13fb2" target="_blank">Website hacking with Google</a> : Hackfreaksofficial <br><br>
+            <a href="https://infosecwriteups.com/how-to-get-started-into-ctf-for-beginners-80c5fd53f7a4" target="_blank">How to get started into CTF for beginners</a> : Mukilan Baskaran <br><br>
+            <a href="https://medium.com/@madaniram2698/top-6-books-to-learn-cybersecurity-for-beginners-in-2022-e6c1bbe3a896" target="_blank">Top 6 books to learn Cybersecurity for Beginners in 2022</a> : Future Cyber Analyst <br><br>
+            <a href="https://medium.com/star-gazers/how-to-become-an-amazing-hacker-d984a4d85361" target="_blank">How to become an amazing hacker</a> : Thexssrat <br><br>
+            <a href="https://medium.com/@nvmeeet/4300-instagram-idor-bug-2022-5386cf492cad" target="_blank">4300$ Instagram IDOR Bug (2022)</a> : Nawaf Alkhaldi <br><br>
+            <a href="https://medium.com/@shooter99/ejpt-elearnsecurity-junior-penetration-testing-exam-guide-8ddb4149cf89" target="_blank">eJPT-eLearnSecurity Junior Penetration Testing Exam Guide.</a> : Tarun Garg <br><br>
           </p>
         <br><br>
       </p>
