--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -59,8 +59,8 @@
               <button class="dropbtn">March</button>
               <div class="dropdown-content">
                 <a href="#week9">Week 9</a>
+                <a href="#week10">Week 10</a>
                 <!--
-                <a href="#week6">Week 10</a>
                 <a href="#week7">Week 11</a>
                 <a href="#week8">Week 12</a>
                 -->
@@ -1523,6 +1523,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week10">Week 10</h2> <br><br><br>
       <h3>Day 68: Mar 8 2022</h3><br>
       <p>
         <h5>My Activities</h5>
@@ -1610,6 +1611,27 @@
             <a href="https://medium.com/star-gazers/how-to-become-an-amazing-hacker-d984a4d85361" target="_blank">How to become an amazing hacker</a> : Thexssrat <br><br>
             <a href="https://medium.com/@nvmeeet/4300-instagram-idor-bug-2022-5386cf492cad" target="_blank">4300$ Instagram IDOR Bug (2022)</a> : Nawaf Alkhaldi <br><br>
             <a href="https://medium.com/@shooter99/ejpt-elearnsecurity-junior-penetration-testing-exam-guide-8ddb4149cf89" target="_blank">eJPT-eLearnSecurity Junior Penetration Testing Exam Guide.</a> : Tarun Garg <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 74: Mar 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/unstabletwin" target="_blank">Unstable Twin</a> : TryHackMe <br><br>
+            Security+ <br><br>
+            <a href="https://www.cyberstartamerica.org/" target="_blank">CyberStart: America</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/382" target="_blank">Validation</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@tushar.tilak.sharma/a-tale-of-open-redirection-to-stored-xss-6ad426ae9d43" target="_blank">A Tale of Open Redirection to Stored XSS</a> : Tushar Sharma <br><br>
+            <a href="https://medium.com/@rudramsaraf90/otp-bypass-via-response-manipulation-and-brute-forcing-ada4cbf159d6" target="_blank">OTP bypass via response manipulation and brute forcing.</a> : Rudram Saraf <br><br>
+            <a href="https://shubhdhungana.medium.com/gold-bug-bounty-resources-web-application-android-ios-security-dc88bfb24eb" target="_blank">Gold Bug Bounty Resources | Web Application, Android & iOS Security</a> : Subh <br><br>
+            <a href="https://infosecwriteups.com/information-gathering-in-penetration-testing-770e01bab326" target="_blank">Information Gathering in Penetration Testing</a> : Ayush Verma <br><br>
+            <a href="https://gupta-bless.medium.com/abusing-forgot-password-functionality-dd12768cdea6" target="_blank">Abusing Forgot Password Functionality</a> : Gupta Bless <br><br>
           </p>
         <br><br>
       </p>
