--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <small class="text-muted lead"><strong><a href="https://writeups.adityadindi.me" class="text-decoration-none" target="_blank">Capture The Flag Writeups</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/CyberSecurityProjects" class="text-decoration-none" target="_blank">CyberSecurity Projects using Python</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/Python-Programming" class="text-decoration-none" target="_blank">Python Programming</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="/WebPages/C-Programming-Tutorial/" class="text-decoration-none" target="_blank">Introduction To C Programming</a></strong></small>
       <br>
       <hr>
       <br>
