--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -23,7 +23,7 @@
 -->
 
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
 
     <div class="container" id="navbar">
       <a class="navbar-brand" href="/index.html">H🔍ME</a>
@@ -1632,6 +1632,27 @@
             <a href="https://shubhdhungana.medium.com/gold-bug-bounty-resources-web-application-android-ios-security-dc88bfb24eb" target="_blank">Gold Bug Bounty Resources | Web Application, Android & iOS Security</a> : Subh <br><br>
             <a href="https://infosecwriteups.com/information-gathering-in-penetration-testing-770e01bab326" target="_blank">Information Gathering in Penetration Testing</a> : Ayush Verma <br><br>
             <a href="https://gupta-bless.medium.com/abusing-forgot-password-functionality-dd12768cdea6" target="_blank">Abusing Forgot Password Functionality</a> : Gupta Bless <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 75: Mar 15 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/414" target="_blank">Nunchucks</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/dirtypipe" target="_blank">Dirty Pipe: CVE-2022-0847</a> : TryHackMe <br><br>
+            <a href="https://hackersarcade.com/academy/" target="_blank">Academy</a> : Hackers Arcade <br><br>
+            <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/shocker-from-hackthebox-52378519fb5b" target="_blank">Shocker From Hackthebox</a> : hac# <br><br>
+            <a href="https://infosecwriteups.com/how-did-i-leak-5-2k-customer-data-from-a-large-company-via-broken-access-control-709eb4027409" target="_blank">How Did I Leak 5.2k Customer Data From a Large Company? (via Broken Access Control)</a> : can1337 <br><br>
+            <a href="https://0xnirvana.medium.com/vulnhub-kioptrix-level-1-9aa9e3f6b8ee" target="_blank">VulnHub: Kioptrix Level 1</a> : 0xNirvana <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/cybersecurity-bible-the-5-rules-for-every-beginner-652309ced97" target="_blank">Cybersecurity Bible: The 5 rules for every beginner.</a> : Debprasad Banerjee <br><br>
           </p>
         <br><br>
       </p>
