--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="/img/detective.png">
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-spy="affix" data-offset-top="197">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" data-spy="affix" data-offset-top="197">
     <div class="container">
       <a class="navbar-brand" href="/">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
