--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1657,6 +1657,30 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 76: Mar 16 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/414" target="_blank">Nunchucks</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/introdigitalforensics" target="_blank">>Dirty Pipe: CVE-2022-0847</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/dirtypipe" target="_blank">Dirty Pipe: CVE-2022-0847</a> : TryHackMe <br><br>
+            <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/how-i-bypassed-disable-functions-in-php-to-get-a-remote-shell-48b827d54979" target="_blank">How I bypassed disable_functions in php to get a remote shell</a> : Asem Eleraky <br><br>
+            <a href="https://medium.com/@girishbo58/rate-limit-bypass-at-readme-com-35c4fb0c7f85" target="_blank">Rate Limit Bypass at Readme.com</a> : Girishbo <br><br>
+            <a href="https://medium.com/@jagannathrajput2003/open-redirect-in-starbucks-48fa23dd31e6" target="_blank">Open Redirect in Starbucks</a> : Jagannathrajput <br><br>
+            <a href="https://pathakabhi24.medium.com/pentesting-tools-to-know-60f5f9e693df" target="_blank">Pentesting Tools to Know</a> : Abhinav Pathak <br><br>
+            <a href="https://ratnakar-infosec.medium.com/my-oscp-journey-passing-the-new-exam-pattern-in-first-ever-attempt-35022967613b" target="_blank">My OSCP Journey: Passing the New Pattern of the Exam in the First Ever Attempt</a> : Ratnakar Singh <br><br>
+            <a href="https://infosecwriteups.com/how-i-passed-oscp-with-100-points-in-12-hours-without-metasploit-in-my-first-attempt-dc8d03366f33" target="_blank">How I Passed OSCP with 100 points in 12 hours without Metasploit in my first attempt</a> : Adithyan AK <br><br>
+            <a href="https://infosecwriteups.com/otp-bypass-and-account-takeover-at-rajagiri-hospital-b0884525236f" target="_blank">OTP Bypass and Account Takeover at Rajagiri Hospital</a> : Krishnadev P Melevila <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
