--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -60,8 +60,8 @@
               <div class="dropdown-content">
                 <a href="#week9">Week 9</a>
                 <a href="#week10">Week 10</a>
+                <a href="#week11">Week 11</a>
                 <!--
-                <a href="#week7">Week 11</a>
                 <a href="#week8">Week 12</a>
                 -->
               </div>
@@ -1636,6 +1636,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week11">Week 11</h2> <br><br><br>
       <h3>Day 75: Mar 15 2022</h3><br>
       <p>
         <h5>My Activities</h5>
