--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1682,6 +1682,32 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 77: Mar 17 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/machines/148" target="_blank">Active</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/mindgames" target="_blank">Mindgames</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Walkthrough Videos</h5>
+        <p>
+          <a href="https://www.youtube.com/playlist?list=PLHUKi1UlEgOIc07Rfk2Jgb5fZbxDPec94" target="_blank">Intro to Binary Exploitation (Pwn) - Practical Buffer Overflow Challenges (for beginners)</a> : CryptoCat <br><br>
+        </p>
+      <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/sql-injection-at-spotify-d19e0861ddf0" target="_blank">SQL Injection at Spotify</a> : Eslam Aki <br><br>
+            <a href="https://medium.com/@harishhacker3010/how-i-hacked-nasa-to-execute-arbitrary-commands-in-their-server-29d44292a60a" target="_blank">How I Hacked NASA to execute arbitrary commands in their server!</a> : Harish SG <br><br>
+            <a href="https://infosecwriteups.com/all-about-account-takeover-825d8fcf2d57" target="_blank">All about Account Takeover</a> : Xcheater <br><br>
+            <a href="https://gupta-bless.medium.com/exploiting-weak-2fa-6ce277916de" target="_blank">Exploiting weak 2FA</a> : Gupta Bless <br><br>
+            <a href="https://medium.com/@tabdeveloper0/introduction-to-buffer-overflows-from-absolute-beginning-4f1fe0a1e092" target="_blank">Introduction To Buffer Overflows from absolute beginning</a> : Rishiraj Singh <br><br>
+            <a href="https://zer1t0.gitlab.io/posts/attacking_ad/" target="_blank">Attacking Active Directory: 0 to 0.9</a> : Eloy Pérez González <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
