--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1689,6 +1689,7 @@
             Security+ <br><br>
             <a href="https://app.hackthebox.com/machines/148" target="_blank">Active</a> : HackTheBox <br><br>
             <a href="https://tryhackme.com/room/mindgames" target="_blank">Mindgames</a> : TryHackMe <br><br>
+            <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
           </p>
         <br><br>
         <h5>Walkthrough Videos</h5>
@@ -1704,6 +1705,27 @@
             <a href="https://gupta-bless.medium.com/exploiting-weak-2fa-6ce277916de" target="_blank">Exploiting weak 2FA</a> : Gupta Bless <br><br>
             <a href="https://medium.com/@tabdeveloper0/introduction-to-buffer-overflows-from-absolute-beginning-4f1fe0a1e092" target="_blank">Introduction To Buffer Overflows from absolute beginning</a> : Rishiraj Singh <br><br>
             <a href="https://zer1t0.gitlab.io/posts/attacking_ad/" target="_blank">Attacking Active Directory: 0 to 0.9</a> : Eloy Pérez González <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 77: Mar 17 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://hackersarcade.com/academy/" target="_blank">Academy</a> : Hackers Arcade <br><br>
+            <a href="https://tryhackme.com/room/vulnnetactive" target="_blank">VulnNet: Active</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/127" target="_blank">Valentine</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/geekculture/ngrok-for-penetration-testers-78761ba0d02" target="_blank">Ngrok for Penetration Tester’s</a> : Alexis Rodriguez <br><br>
+            <a href="https://medium.com/geekculture/merlin-c2-the-basics-d733487786ed" target="_blank">Merlin C2: The Basics</a> : Alexis Rodriguez <br><br>
+            <a href="https://cyb3rwulfengrav.medium.com/beginner-bug-bounty-journey-3eccb8b71859" target="_blank">Beginner Bug Bounty Journey</a> : Cyb3rWulfengrav <br><br>
+            <a href="https://medium.com/@tobydavenn/how-i-made-the-bbc-hall-of-fame-3-times-2c816fa515d7" target="_blank">How I Made The BBC Hall Of Fame 3 Times</a> : Tobydavenn <br><br>
+            <a href="https://levelup.gitconnected.com/hack-wifi-passwords-33914949e382" target="_blank">Hack WiFi Router Passwords using Brute-Force Attacks</a> : Gourav Dhar <br><br>
           </p>
         <br><br>
       </p>
