--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1709,7 +1709,7 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 77: Mar 17 2022</h3><br>
+      <h3>Day 78: Mar 18 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -1729,6 +1729,27 @@
           </p>
         <br><br>
       </p>
+      <br><br>
+      <h3>Day 79: Mar 19 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/geekculture/scanning-all-the-things-with-projectdiscoverys-nuclei-b5ceff93b56e" target="_blank">Scanning All The Things with ProjectDiscovery’s Nuclei</a> : Alexis Rodriguez <br><br>
+            <a href="https://infosecwriteups.com/pentesting-the-relevance-top-10-tools-and-more-b15a7e70ed9f" target="_blank">Pentesting: The Relevance, Top 10 Tools, And More</a> : Varsha Paul <br><br>
+            <a href="https://sparshjazz.medium.com/how-to-learn-hacking-my-path-692fccd42d56" target="_blank">How to Learn Hacking? My Path!</a> : ZeusCybersec <br><br>
+            <a href="https://medium.com/@pragyagupta16/yamagata-xss-journey-9d35c6597527" target="_blank">Yamagata XSS journey</a> : Pragya Gupta <br</br>
+            <a href="https://sparshjazz.medium.com/tryhackme-attacking-kerberos-197227a92a64" target="_blank">Attacking Active Directory & Kerberoasting</a> : ZeusCybersec <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 80: Mar 20 2022</h3><br>
+      <p>Break Day</p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
